# autonomous-robot-ros

./: .gitignore  README.md  commands.md
src/outdoor_robot_bringup/: CMakeLists.txt  package.xml
src/outdoor_robot_bringup/config/: ekf.yaml  navigation.rviz  twist_mux_params.yaml
src/outdoor_robot_bringup/launch/: bringup.launch.py
src/outdoor_robot_bringup/worlds/: rough_terrain.world
src/outdoor_robot_description/: CMakeLists.txt  package.xml
src/outdoor_robot_description/urdf/: gazebo_plugins.xacro  robot.urdf.xacro
src/outdoor_robot_mission/: CMakeLists.txt  package.xml
src/outdoor_robot_mission/src/: gps_waypoint_follower.cpp
src/outdoor_robot_navigation/: CMakeLists.txt  package.xml
src/outdoor_robot_navigation/config/: nav2_params.yaml
src/outdoor_robot_navigation/launch/: navigation.launch.py
src/outdoor_robot_perception/: CMakeLists.txt  package.xml
src/outdoor_robot_perception/src/: inspection_behavior_node.cpp
